Refactor: Stats 서비스 수정
- StatsService 로직 업데이트
- 관련 테스트 코드 수정